--- a/bootstrap_intro/index.html
+++ b/bootstrap_intro/index.html
@@ -47,5 +47,7 @@
       </nav>
       <!-- Insert Bootstrap JS file at the bottom of the body so that it loads after everything else -->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+      <script src="script.js"></script>
 </body>
 </html>
